--- a/index.html
+++ b/index.html
@@ -1,3 +1,172 @@
-<body>
-<h1>Hello user! :)</h1>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<head>
+<title></title>
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+ <br/>
+<style type="text/css">
+<!--
+	p {margin: 0; padding: 0;}	.ft10{font-size:7px;font-family:Times;color:#666666;}
+	.ft11{font-size:52px;font-family:Times;color:#000000;}
+	.ft12{font-size:11px;font-family:Times;color:#666666;}
+	.ft13{font-size:11px;font-family:Times;color:#666666;}
+	.ft14{font-size:11px;font-family:Times;color:#1154cc;}
+	.ft15{font-size:11px;font-family:Times;color:#000000;}
+	.ft16{font-size:14px;font-family:Times;color:#666666;}
+	.ft17{font-size:14px;font-family:Times;color:#2078c7;}
+	.ft18{font-size:14px;font-family:Times;color:#000000;}
+	.ft19{font-size:14px;font-family:Times;color:#000000;}
+	.ft110{font-size:14px;font-family:Times;color:#000000;}
+	.ft111{font-size:16px;font-family:Times;color:#000000;}
+	.ft112{font-size:9px;font-family:Times;color:#666666;}
+	.ft113{font-size:11px;font-family:Times;color:#2078c7;}
+	.ft114{font-size:11px;line-height:21px;font-family:Times;color:#666666;}
+-->
+</style>
+</head>
+<body bgcolor="#A0A0A0" vlink="blue" link="blue">
+<div id="page1-div" style="position:relative;width:918px;height:1188px;">
+<img width="918" height="1188" src="target001.png" alt="background image"/>
+<p style="position:absolute;top:52px;left:65px;white-space:nowrap" class="ft10"> </p>
+<p style="position:absolute;top:73px;left:76px;white-space:nowrap" class="ft11"><b>Nare&#160;Gasparyan </b></p>
+<p style="position:absolute;top:149px;left:76px;white-space:nowrap" class="ft12"><b>Address​</b>:&#160;&#160;&#160;&#160;Saryan&#160;18,&#160;39&#160;apt,&#160;Yerevan,&#160;Armenia </p>
+<p style="position:absolute;top:164px;left:76px;white-space:nowrap" class="ft12"><b>Phone​</b>:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;(374)&#160;55&#160;19&#160;69&#160;33 </p>
+<p style="position:absolute;top:180px;left:76px;white-space:nowrap" class="ft12"><b>Email​</b>:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;ngaspary@gmail.com </p>
+<p style="position:absolute;top:196px;left:76px;white-space:nowrap" class="ft12"><b>LinkedIn​</b>:&#160;&#160;​</p>
+<p style="position:absolute;top:196px;left:149px;white-space:nowrap" class="ft14"><a href="https://www.linkedin.com/in/nare-gasparyan-4b319214/">https://www.linkedin.com/in/nare-gasparyan-4b319214/</a></p>
+<p style="position:absolute;top:196px;left:534px;white-space:nowrap" class="ft12"><b> </b></p>
+<p style="position:absolute;top:191px;left:811px;white-space:nowrap" class="ft15"><b> </b></p>
+<p style="position:absolute;top:274px;left:76px;white-space:nowrap" class="ft16"><b>More&#160;than&#160;12&#160;&#160;years&#160;of&#160;experience&#160;in&#160;building&#160;scalable&#160;SaaS </b></p>
+<p style="position:absolute;top:293px;left:76px;white-space:nowrap" class="ft16"><b>products&#160;for&#160;SMB&#160;and&#160;Enterprise.  </b></p>
+<p style="position:absolute;top:338px;left:76px;white-space:nowrap" class="ft16"><b>Having&#160;software&#160;development&#160;as&#160;a&#160;background,&#160;since&#160;2012 </b></p>
+<p style="position:absolute;top:357px;left:76px;white-space:nowrap" class="ft16"><b>I’ve&#160;been&#160;in&#160;charge&#160;of&#160;R&amp;D&#160;teams,&#160;backend&#160;services </b></p>
+<p style="position:absolute;top:378px;left:76px;white-space:nowrap" class="ft16"><b>architecture,&#160;servers&#160;uptime,&#160;collaboration&#160;within </b></p>
+<p style="position:absolute;top:398px;left:76px;white-space:nowrap" class="ft16"><b>Development,&#160;QA&#160;and&#160;Product&#160;Management&#160;departments, </b></p>
+<p style="position:absolute;top:418px;left:76px;white-space:nowrap" class="ft16"><b>collaboration&#160;between&#160;Germany&#160;and&#160;Armenia&#160;&#160;based&#160;teams, </b></p>
+<p style="position:absolute;top:438px;left:76px;white-space:nowrap" class="ft16"><b>people&#160;management,&#160;setup&#160;of&#160;agile&#160;processes,&#160;injection&#160;of </b></p>
+<p style="position:absolute;top:459px;left:76px;white-space:nowrap" class="ft16"><b>modern&#160;technologies&#160;and&#160;processes&#160;like&#160;microservices, </b></p>
+<p style="position:absolute;top:479px;left:76px;white-space:nowrap" class="ft16"><b>continuous&#160;integration&#160;and&#160;delivery. </b></p>
+<p style="position:absolute;top:524px;left:76px;white-space:nowrap" class="ft16"><b>Key&#160;contributor&#160;in&#160;building&#160;&#160;Monitis&#160;and&#160;TeamViewer&#160;IOT </b></p>
+<p style="position:absolute;top:543px;left:76px;white-space:nowrap" class="ft16"><b>products&#160;from&#160;skratch. </b></p>
+<p style="position:absolute;top:564px;left:76px;white-space:nowrap" class="ft13"> </p>
+<p style="position:absolute;top:580px;left:76px;white-space:nowrap" class="ft13"> </p>
+<p style="position:absolute;top:639px;left:76px;white-space:nowrap" class="ft17"><b>EXPERIENCE </b></p>
+<p style="position:absolute;top:685px;left:76px;white-space:nowrap" class="ft18"><b>TeamViewer&#160;Armenia​</b>&#160;—​<i>Team&#160;Manager</i></p>
+<p style="position:absolute;top:683px;left:396px;white-space:nowrap" class="ft111"><i> </i></p>
+<p style="position:absolute;top:711px;left:76px;white-space:nowrap" class="ft112">2019&#160;March&#160;-&#160;Present </p>
+<p style="position:absolute;top:735px;left:76px;white-space:nowrap" class="ft13">Responsible&#160;for: </p>
+<p style="position:absolute;top:766px;left:103px;white-space:nowrap" class="ft13">●</p>
+<p style="position:absolute;top:765px;left:130px;white-space:nowrap" class="ft114">1&#160;fully&#160;functional&#160;agile&#160;team&#160;(including&#160;all&#160;team&#160;members:&#160;Tech <br/>Lead,&#160;PO,&#160;QA,&#160;developers&#160;and&#160;scrum&#160;master)&#160;and&#160;for&#160;Big <br/>Data/DevOps&#160;service&#160;team </p>
+<p style="position:absolute;top:830px;left:103px;white-space:nowrap" class="ft13">●</p>
+<p style="position:absolute;top:829px;left:130px;white-space:nowrap" class="ft114">Conversion&#160;of&#160;high&#160;level&#160;requirements&#160;from&#160;Product&#160;Management <br/>into&#160;product&#160;features&#160;and&#160;implementation&#160;and&#160;release&#160;of&#160;those </p>
+<p style="position:absolute;top:873px;left:103px;white-space:nowrap" class="ft13">●</p>
+<p style="position:absolute;top:872px;left:130px;white-space:nowrap" class="ft13">Collaboration&#160;between&#160;Germany&#160;and&#160;Armenia&#160;based&#160;teams </p>
+<p style="position:absolute;top:895px;left:103px;white-space:nowrap" class="ft13">●</p>
+<p style="position:absolute;top:893px;left:130px;white-space:nowrap" class="ft13">Backend&#160;CoP&#160;(Community&#160;of&#160;Practices)  </p>
+<p style="position:absolute;top:939px;left:76px;white-space:nowrap" class="ft18"><b>TeamViewer&#160;Armenia​</b>&#160;—&#160;​<i>Head&#160;of&#160;Software&#160;Development </i></p>
+<p style="position:absolute;top:958px;left:76px;white-space:nowrap" class="ft110"><i>Backend&#160;Chapter</i></p>
+<p style="position:absolute;top:957px;left:205px;white-space:nowrap" class="ft111"><i> </i></p>
+<p style="position:absolute;top:985px;left:76px;white-space:nowrap" class="ft112">2017&#160;November&#160;-&#160;Present </p>
+<p style="position:absolute;top:1009px;left:76px;white-space:nowrap" class="ft13">Responsible&#160;for: </p>
+<p style="position:absolute;top:1041px;left:103px;white-space:nowrap" class="ft13">●</p>
+<p style="position:absolute;top:1040px;left:130px;white-space:nowrap" class="ft13">IOT&#160;backend&#160;microservices&#160;architecture,&#160;code&#160;quality </p>
+<p style="position:absolute;top:1062px;left:103px;white-space:nowrap" class="ft13">●</p>
+<p style="position:absolute;top:1061px;left:130px;white-space:nowrap" class="ft13">IOT&#160;releases </p>
+<p style="position:absolute;top:1084px;left:103px;white-space:nowrap" class="ft13">●</p>
+<p style="position:absolute;top:1082px;left:130px;white-space:nowrap" class="ft13">High&#160;availability&#160;and&#160;support&#160;of&#160;Monitis&#160;product </p>
+<p style="position:absolute;top:294px;left:614px;white-space:nowrap" class="ft113"><b>SKILLS </b></p>
+<p style="position:absolute;top:320px;left:614px;white-space:nowrap" class="ft13">People&#160;Management </p>
+<p style="position:absolute;top:350px;left:614px;white-space:nowrap" class="ft114">Agile&#160;Processes&#160;(Scrum, <br/>Kanban) </p>
+<p style="position:absolute;top:402px;left:614px;white-space:nowrap" class="ft114">Java,&#160;Tomcat,&#160;Hibernate, <br/>MySQL,&#160;OOP </p>
+<p style="position:absolute;top:454px;left:614px;white-space:nowrap" class="ft13">Microservices&#160;Architecture </p>
+<p style="position:absolute;top:484px;left:614px;white-space:nowrap" class="ft13">GRPC,&#160;MongoDB </p>
+<p style="position:absolute;top:514px;left:614px;white-space:nowrap" class="ft13">Kafka,&#160;Kafka&#160;Streams,&#160;KSQL </p>
+<p style="position:absolute;top:545px;left:614px;white-space:nowrap" class="ft13">Hbase,&#160;Flume </p>
+<p style="position:absolute;top:575px;left:614px;white-space:nowrap" class="ft114">CI,&#160;CD&#160;process,&#160;Jenkins, <br/>GitLab </p>
+<p style="position:absolute;top:627px;left:614px;white-space:nowrap" class="ft13">Jmeter </p>
+<p style="position:absolute;top:657px;left:614px;white-space:nowrap" class="ft13">Java&#160;Script,&#160;HTML,&#160;CSS </p>
+<p style="position:absolute;top:688px;left:614px;white-space:nowrap" class="ft13">Linux&#160;bash,&#160;Ansible,&#160;Vagrant </p>
+<p style="position:absolute;top:718px;left:614px;white-space:nowrap" class="ft13"> </p>
+<p style="position:absolute;top:783px;left:614px;white-space:nowrap" class="ft113"><b>LANGUAGES </b></p>
+<p style="position:absolute;top:824px;left:614px;white-space:nowrap" class="ft13">English&#160;-&#160;Business&#160;level </p>
+<p style="position:absolute;top:869px;left:614px;white-space:nowrap" class="ft13">Russian&#160;-&#160;Fluent </p>
+<p style="position:absolute;top:914px;left:614px;white-space:nowrap" class="ft13">Armenian&#160;-&#160;Native </p>
+<p style="position:absolute;top:979px;left:614px;white-space:nowrap" class="ft113"><b>PERSONAL DATA </b></p>
+<p style="position:absolute;top:1019px;left:614px;white-space:nowrap" class="ft114">Family:&#160;Married,&#160;have&#160;2&#160;kids <br/>(pupils&#160;at&#160;elementary&#160;school) </p>
+<p style="position:absolute;top:1086px;left:614px;white-space:nowrap" class="ft13">Birthday:&#160;1987,&#160;September&#160;14 </p>
+</div>
 </body>
+</html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<head>
+<title></title>
+
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+ <br/>
+<style type="text/css">
+<!--
+	p {margin: 0; padding: 0;}	.ft20{font-size:11px;font-family:Times;color:#666666;}
+	.ft21{font-size:14px;font-family:Times;color:#000000;}
+	.ft22{font-size:14px;font-family:Times;color:#000000;}
+	.ft23{font-size:14px;font-family:Times;color:#000000;}
+	.ft24{font-size:9px;font-family:Times;color:#666666;}
+	.ft25{font-size:14px;font-family:Times;color:#2078c7;}
+	.ft26{font-size:14px;font-family:Times;color:#b6b6b6;}
+	.ft27{font-size:11px;line-height:21px;font-family:Times;color:#666666;}
+-->
+</style>
+</head>
+<body bgcolor="#A0A0A0" vlink="blue" link="blue">
+<div id="page2-div" style="position:relative;width:918px;height:1188px;">
+<img width="918" height="1188" src="target002.png" alt="background image"/>
+<p style="position:absolute;top:55px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:54px;left:130px;white-space:nowrap" class="ft27">People&#160;management&#160;for&#160;backend&#160;developers&#160;and&#160;big&#160;data <br/>engineers &#160; </p>
+<p style="position:absolute;top:98px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:97px;left:130px;white-space:nowrap" class="ft20">Collaboration&#160;between&#160;Germany&#160;and&#160;Armenia&#160;based&#160;teams </p>
+<p style="position:absolute;top:142px;left:76px;white-space:nowrap" class="ft21"><b>Monitis​</b>&#160;—​<i>Head&#160;of&#160;Software&#160;Development&#160;Backend&#160;Chapter </i></p>
+<p style="position:absolute;top:169px;left:76px;white-space:nowrap" class="ft24">2016&#160;September&#160;-&#160;2017&#160;November </p>
+<p style="position:absolute;top:193px;left:76px;white-space:nowrap" class="ft20">Responsible&#160;for: </p>
+<p style="position:absolute;top:224px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:223px;left:130px;white-space:nowrap" class="ft20">Monitis&#160;backend&#160;architecture,&#160;code&#160;quality </p>
+<p style="position:absolute;top:245px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:244px;left:130px;white-space:nowrap" class="ft20">Servers&#160;uptime </p>
+<p style="position:absolute;top:267px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:266px;left:130px;white-space:nowrap" class="ft20">Agile&#160;Transformation&#160;(Scrum) </p>
+<p style="position:absolute;top:288px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:287px;left:130px;white-space:nowrap" class="ft20">Setup&#160;of&#160;CI,&#160;CD&#160;process </p>
+<p style="position:absolute;top:310px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:308px;left:130px;white-space:nowrap" class="ft20">People&#160;management&#160;for&#160;backend&#160;developers &#160; </p>
+<p style="position:absolute;top:354px;left:76px;white-space:nowrap" class="ft21"><b>Monitis&#160;​</b>—&#160;​<i>Development&#160;Team&#160;Lead </i></p>
+<p style="position:absolute;top:380px;left:76px;white-space:nowrap" class="ft24">2012&#160;-&#160;2016 </p>
+<p style="position:absolute;top:404px;left:76px;white-space:nowrap" class="ft20">Responsible&#160;for: </p>
+<p style="position:absolute;top:436px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:434px;left:130px;white-space:nowrap" class="ft27">Development&#160;of&#160;public&#160;API,&#160;Custom,&#160;Server/Device&#160;and&#160;RUM <br/>monitoring </p>
+<p style="position:absolute;top:478px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:477px;left:130px;white-space:nowrap" class="ft20">Communication&#160;with&#160;QA&#160;and&#160;Product&#160;Management&#160;Departments </p>
+<p style="position:absolute;top:500px;left:103px;white-space:nowrap" class="ft20">●</p>
+<p style="position:absolute;top:499px;left:130px;white-space:nowrap" class="ft20">People&#160;management&#160;for&#160;fullstack&#160;developers&#160;within&#160;the&#160;team </p>
+<p style="position:absolute;top:544px;left:76px;white-space:nowrap" class="ft21"><b>Monitis&#160;​</b>—&#160;​<i>Senior&#160;Full&#160;Stack&#160;Developer </i></p>
+<p style="position:absolute;top:570px;left:76px;white-space:nowrap" class="ft24">2010&#160;-&#160;2012 </p>
+<p style="position:absolute;top:593px;left:76px;white-space:nowrap" class="ft20">Developing&#160;features&#160;for&#160;Monitis&#160;product&#160;using&#160;technologies&#160;like&#160;Java, </p>
+<p style="position:absolute;top:609px;left:76px;white-space:nowrap" class="ft20">Tomcat,&#160;Hibernate,&#160;MySQL,&#160;JavaScript,&#160;JQuery,&#160;Ext.Js,&#160;HighChart </p>
+<p style="position:absolute;top:649px;left:76px;white-space:nowrap" class="ft21"><b>Sourcio​</b>—&#160;​<i>Full&#160;Stack&#160;Developer </i></p>
+<p style="position:absolute;top:675px;left:76px;white-space:nowrap" class="ft24">2006&#160;-&#160;2010 </p>
+<p style="position:absolute;top:698px;left:76px;white-space:nowrap" class="ft20">Developing&#160;features&#160;for&#160;Monitis&#160;product&#160;and&#160;MySpace&#160;social&#160;apps&#160;using </p>
+<p style="position:absolute;top:713px;left:76px;white-space:nowrap" class="ft20">technologies&#160;like&#160;Java,&#160;Tomcat,&#160;Hibernate,&#160;MySQL,&#160;JavaScript,&#160;JQuery, </p>
+<p style="position:absolute;top:729px;left:76px;white-space:nowrap" class="ft20">Ext.Js,&#160;HighChart </p>
+<p style="position:absolute;top:788px;left:76px;white-space:nowrap" class="ft25"><b>EDUCATION</b></p>
+<p style="position:absolute;top:788px;left:173px;white-space:nowrap" class="ft26"><b> </b></p>
+<p style="position:absolute;top:834px;left:76px;white-space:nowrap" class="ft21"><b>Yerevan&#160;Polytechnic&#160;University&#160;​</b>&#160;—&#160;Master<i> </i></p>
+<p style="position:absolute;top:860px;left:76px;white-space:nowrap" class="ft24">2008&#160;-&#160;2010 </p>
+<p style="position:absolute;top:884px;left:76px;white-space:nowrap" class="ft20">Department&#160;of&#160;Computer&#160;Science </p>
+<p style="position:absolute;top:915px;left:76px;white-space:nowrap" class="ft20">Master&#160;thesis:&#160;Server&#160;and&#160;Device&#160;Monitoring  </p>
+<p style="position:absolute;top:960px;left:76px;white-space:nowrap" class="ft21"><b>Yerevan&#160;Polytechnic&#160;University&#160;​</b>&#160;—&#160;Bachelor<i> </i></p>
+<p style="position:absolute;top:986px;left:76px;white-space:nowrap" class="ft24">2004&#160;-&#160;2008 </p>
+<p style="position:absolute;top:1010px;left:76px;white-space:nowrap" class="ft20">Department&#160;of&#160;Computer&#160;Science </p>
+<p style="position:absolute;top:1041px;left:76px;white-space:nowrap" class="ft20"> </p>
+<p style="position:absolute;top:1082px;left:65px;white-space:nowrap" class="ft20"> </p>
+</div>
+</body>
+</html>
